@@ -90,11 +90,11 @@ protocol = postfix
 
 # 'dnsbl' is a dns domain name of the dnsbl that 'dnsbl' check will query
 # There are no defaults, but below is a list of dnsbls you could be using
-dnsbl = bl.spamcop.net 
-dnsbl = sbl.spamhaus.org
-dnsbl = dnsbl.njabl.org
+# dnsbl = rbl-plus.mail-abuse.net # this is not free
+dnsbl = bl.spamcop.net
+dnsbl = combined.njabl.org
 dnsbl = cbl.abuseat.org
-dnsbl = xbl.smaphaus.org
+dnsbl = dnsbl.sorbs.net
 
 # 'blocker_host' is the host name of the Sophos blocker server.
 # blocker_host =
